--- a/main.css
+++ b/main.css
@@ -8,6 +8,16 @@ body, input, textarea, button {
   font: 12pt/1.3 sans-serif;
 }
 
+#status {
+  display: flex;
+  margin: 1em 0;
+}
+#status > p {
+  margin: 0;
+  flex-grow: 1;
+  align-self: center;
+}
+
 fieldset {
   padding: 0;
   border: none;
