--- a/main.css
+++ b/main.css
@@ -1,26 +1,51 @@
+:root {
+  --tertiary: #083575;
+  --margin: 20px;
+}
+
 body {
-  max-width: 800px;
+  max-width: 840px;
   margin: 0 auto;
-  padding: 0 1em;
+  padding: 0;
 }
 
 body, input, textarea, button {
   font: 12pt/1.3 sans-serif;
 }
 
-#status {
+h1 {
+  color: white;
+  background-color: var(--tertiary);
+  padding: .5em var(--margin) .33em;
+  display: flex;
+}
+h1 > * {
+  align-self: center;
+}
+h1 > img {
+  max-width: 2em;
+  margin-right: .5em;
+}
+h2 {
+  color: var(--tertiary);
+}
+
+
+#loginStatus {
   display: flex;
   margin: 1em 0;
+  padding: 0 var(--margin);
 }
-#status > p {
+#loginStatus > p {
   margin: 0;
   flex-grow: 1;
   align-self: center;
 }
 
 fieldset {
-  padding: 0;
+  padding: 0 var(--margin);
   border: none;
+  border-bottom: 5px solid var(--tertiary);
 }
 
 fieldset > ul {
@@ -37,6 +62,7 @@ label {
   font-weight: bold;
   min-width: 8em;
   margin-top: .3em;
+  color: var(--tertiary);
 }
 label::after {
   content: ': ';
@@ -57,10 +83,13 @@ button {
   font-weight: bold;
   padding: .5em 1em .33em;
   margin-left: 8em;
+  color: var(--tertiary);
 }
 
 #responsePane {
   display: none;
+  padding: 0 var(--margin);
+  border-bottom: 5px solid var(--tertiary);
 }
 
 pre {
